# SMASH-pack

./: CMakeLists.txt  README.md
cmake/: AddCompilerFlag.cmake
share/smashAnalysis/: CMakeLists.txt
share/smashAnalysis/python_scripts/: version.py
share/smashAnalysis/test/FOPI_pions/: CMakeLists.txt
share/smashAnalysis/test/afterburner/: CMakeLists.txt
share/smashAnalysis/test/angular_distributions/: CMakeLists.txt
share/smashAnalysis/test/cross_sections/: CMakeLists.txt
share/smashAnalysis/test/densities/: CMakeLists.txt
share/smashAnalysis/test/detailed_balance/: CMakeLists.txt
share/smashAnalysis/test/dileptons/: CMakeLists.txt
share/smashAnalysis/test/elastic_box/: CMakeLists.txt
share/smashAnalysis/test/energy_scan/: CMakeLists.txt
share/smashVHLLEhybrid/: CMakeLists.txt
src/: smashAnalysis.sh.in  smashPaths.sh.in  smashVHLLEhybrid.sh.in
src/hadron-sampler/: CMakeLists.txt
src/smash/: CMakeLists.txt
src/smash/tests/: CMakeLists.txt
